--- a/pay-track/Clarinet.toml
+++ b/pay-track/Clarinet.toml
@@ -17,6 +17,10 @@ epoch = "latest"
 path = "contracts/escrow-service.clar"
 epoch = "latest"
 
+[contracts.payment-splitter]
+path = "contracts/payment-splitter.clar"
+epoch = "latest"
+
 [repl.analysis]
 passes = ["check_checker"]
 check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
