feat: Implement multi-signature escrow contract with detailed functionality
- Added a comprehensive multi-signature escrow contract allowing for various signature requirements (e.g., 2-of-3, 3-of-5).
- Introduced functions for creating escrows, signing for release/refund, and executing transactions based on required signatures.
- Implemented data structures to manage escrow details, signers, and transaction history.
- Added error handling for various scenarios including unauthorized access, insufficient signatures, and expired escrows.
- Created tests to validate the functionality of the multi-signature escrow contract.

feat: Simplify payment splitter contract

- Developed a simplified version of the payment splitter contract to manage payments among multiple recipients.
- Implemented functions for creating splits, adding recipients, and executing split payments with fee handling.
- Added error handling for invalid splits and unauthorized actions.
- Created tests to ensure the correct functionality of the payment splitter contract.

feat: Enhance recurring payment contract for subscription management

- Developed a recurring payment contract to facilitate subscription-based payments.
- Implemented functions for creating subscriptions, executing payments, canceling, and reactivating subscriptions.
- Added validation for payment intervals and ensured proper fee collection.
- Created tests to validate the functionality of the recurring payment contract, including edge cases for payment execution and subscription management.

--- a/pay-track/deployments/default.simnet-plan.yaml
+++ b/pay-track/deployments/default.simnet-plan.yaml
@@ -69,9 +69,24 @@ plan:
             path: contracts/escrow-service.clar
             clarity-version: 4
         - emulated-contract-publish:
+            contract-name: multisig-escrow
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/multisig-escrow.clar
+            clarity-version: 4
+        - emulated-contract-publish:
             contract-name: payment-processor
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/payment-processor.clar
+            clarity-version: 4
+        - emulated-contract-publish:
+            contract-name: payment-splitter
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/payment-splitter.clar
+            clarity-version: 4
+        - emulated-contract-publish:
+            contract-name: recurring-payment
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/recurring-payment.clar
             clarity-version: 4
         - emulated-contract-publish:
             contract-name: user-registry
