--- a/pay-track/Clarinet.toml
+++ b/pay-track/Clarinet.toml
@@ -21,6 +21,14 @@ epoch = "latest"
 path = "contracts/payment-splitter.clar"
 epoch = "latest"
 
+[contracts.recurring-payment]
+path = "contracts/recurring-payment.clar"
+epoch = "latest"
+
+[contracts.multisig-escrow]
+path = "contracts/multisig-escrow.clar"
+epoch = "latest"
+
 [repl.analysis]
 passes = ["check_checker"]
 check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
