--- a/pay-track/deployments/new-contracts.mainnet-plan.yaml
+++ b/pay-track/deployments/new-contracts.mainnet-plan.yaml
@@ -1,6 +1,6 @@
 ---
-id: 0
-name: Mainnet deployment
+id: 1
+name: New contracts mainnet deployment
 network: mainnet
 stacks-node: "https://api.hiro.so"
 bitcoin-node: "http://blockstack:blockstacksystem@bitcoin.blockstack.com:8332"
@@ -9,24 +9,10 @@ plan:
     - id: 0
       transactions:
         - contract-publish:
-            contract-name: escrow-service
-            expected-sender: SPD7WQ5ZTDXV45D3ZCY00N1WTRF106SH9XA0D979
-            cost: 35480
-            path: contracts/escrow-service.clar
-            anchor-block-only: true
-            clarity-version: 4
-        - contract-publish:
             contract-name: multisig-escrow
             expected-sender: SPD7WQ5ZTDXV45D3ZCY00N1WTRF106SH9XA0D979
             cost: 45000
             path: contracts/multisig-escrow.clar
-            anchor-block-only: true
-            clarity-version: 4
-        - contract-publish:
-            contract-name: payment-processor
-            expected-sender: SPD7WQ5ZTDXV45D3ZCY00N1WTRF106SH9XA0D979
-            cost: 20060
-            path: contracts/payment-processor.clar
             anchor-block-only: true
             clarity-version: 4
         - contract-publish:
@@ -41,13 +27,6 @@ plan:
             expected-sender: SPD7WQ5ZTDXV45D3ZCY00N1WTRF106SH9XA0D979
             cost: 38000
             path: contracts/recurring-payment.clar
-            anchor-block-only: true
-            clarity-version: 4
-        - contract-publish:
-            contract-name: user-registry
-            expected-sender: SPD7WQ5ZTDXV45D3ZCY00N1WTRF106SH9XA0D979
-            cost: 15350
-            path: contracts/user-registry.clar
             anchor-block-only: true
             clarity-version: 4
       epoch: "3.3"
